<resources>
    <string name="app_name">CustomAnalogClock</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="set_time">Set Time</string>
    <string name="change">Change</string>
    <string name="sync">Sync</string>
    <string name="sync_time">Sync Time</string>
    <string name="skill">Skill</string>
    <string name="title_activity_choose_skill">ChooseSkillActivity</string>
    <string name="approve">Approve</string>
    <string name="title_activity_alarm">AlarmActivity</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="unset_alarm">Unset Alarm</string>
</resources>
